src/test/deca/context/invalid/class/protected1.deca
// invalide : erreur ligne 10, protected.

class A{
    protected  int b;
}

class B{
    void m(){
        println(a.b);
    }
}